--- a/views/connected_layout.haml
+++ b/views/connected_layout.haml
@@ -1,8 +1,8 @@
 .row
 	.span3
-		%h4 #{@@db.name}
+		%h4 #{session[:db].name}
 		%ul.nav.nav-tabs.nav-stacked.nav-pills
-			- @@db.collection_names.each do |collection|
+			- session[:db].collection_names.each do |collection|
 				%li
 					%a{:href => "/collection/#{collection}"}
 						#{collection}
