Migrated to bootstrap 3.0, now using CodeMirror for better document editing experience.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -19,7 +19,7 @@
 .edit {
 
 }
-.edit textarea {
-	width: 90%;
-	height: 350px;
-}
+/*.edit textarea {*/
+	/*width: 90%;*/
+	/*height: 350px;*/
+/*}*/
