--- a/views/connected_layout.haml
+++ b/views/connected_layout.haml
@@ -1,10 +1,10 @@
 .row
-	.span3
+	.col-lg-3
 		%h4 #{session[:db].name}
 		%ul.nav.nav-tabs.nav-stacked.nav-pills
 			- session[:db].collection_names.each do |collection|
 				%li
 					%a{:href => "/collection/#{collection}"}
 						#{collection}
-	.span9
+	.col-lg-9
 		= yield
