--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,18 +1,20 @@
+<!DOCTYPE html>
 %html
 
 	%head
 		%title TooMongo
+		%meta{:name=>"viewport", :content=>"width=device-width, initial-scale=1.0"}
 		%script{:src => "/vendor/jquery-1.9.1.min.js", :type => "text/javascript"}
 		%script{:src => "/vendor/bootstrap/js/bootstrap.min.js", :type => "text/javascript"}
 		%link{:rel => "stylesheet", :href => "/vendor/bootstrap/css/bootstrap.min.css", :type => "text/css"}
 		%link{:rel => "stylesheet", :href => "/css/styles.css", :type => "text/css"}
-
+		%link{:rel => "stylesheet", :href => "/vendor/codemirror/codemirror.css", :type => "text/css"}
+		%script{:src => "/vendor/codemirror/codemirror.js"}
+		%script{:src => "/vendor/codemirror/javascript/javascript.js"}
 	%body
-		.navbar.navbar-fixed-top.navbar-inverse
-			.navbar-inner
-				.container
-					%a.brand{:href => "#"}
-						tooloMongo
-					%ul.nav
+		%nav.navbar.navbar-fixed-top.navbar-inverse
+			.navbar-header
+				%a.navbar-brand{:href => "#"}
+					tooloMongo
 		#content.container
 			=yield
